gen/24.2-beta/rpk/rpk-cluster-self-test-start.adoc
= rpk cluster self-test start
:description: rpk cluster self-test start

Starts one or more benchmark tests on one or more nodes of the cluster.

NOTE: Redpanda self-test runs benchmarks that consume significant system resources. Do not start self-test if large workloads are already running on the system.

Available tests to run:

* Disk tests:
  ** Throughput test: 512 KB messages, sequential read/write
     *** Uses a larger request message sizes and deeper I/O queue depth to write/read more bytes in a shorter amount of time, at the cost of IOPS/latency.
  ** Latency and io depth tests: 4 KB messages, sequential read/write, varying io depth
     *** Uses small IO sizes and varying levels of parallelism to determine the relationship between io depth and IOPS
     *** Includes one test without using dsync (fdatasync) on each write to establish the cost of dsync
  ** 16 KB test
     *** One high io depth test at 16 KB to reflect performance at Redpanda's default chunk size
* Network tests:
  ** Throughput test: 8192-bit messages
     *** Unique pairs of Redpanda nodes each act as a client and a server.
     *** The test pushes as much data over the wire, within the test parameters.
* Cloud storage tests
  ** Latency test: 1024-bit object.
  ** Depending on cluster read/write permissions ('cloud_storage_enable_remote_read', 'cloud_storage_enable_remote_write'), a series of cloud storage operations are performed:
     *** Upload an object to an object storage.
     *** List objects in the object storage.
     *** Download an object from the object storage.
     *** Delete the original object from the object storage, if it was uploaded.

This command prompts users for confirmation (unless the flag '--no-confirm' is specified), then returns a test identifier ID, and runs the tests.

To view the test status, poll 'rpk cluster self-test status'. Once the tests end, the cached results will be available with 'rpk cluster self-test status'.

== Usage

[,bash]
----
rpk cluster self-test start [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|--cloud-backoff-ms |- |uint       The backoff in milliseconds for a cloud storage request (default 100).

|--cloud-timeout-ms |- |uint       The timeout in milliseconds for a cloud storage request (default 5000).

|--disk-duration-ms |duration |uint       The  in milliseconds of individual disk test runs (default 30000).

|-h, --help |- |Help for start.

|--network-duration-ms |duration |uint    The  in milliseconds of individual network test runs (default 30000).

|--no-confirm |- |Acknowledge warning prompt skipping read from stdin.

|--only-cloud-test |- |Runs only cloud storage benchmarks.

|--only-disk-test |- |Runs only the disk benchmarks.

|--only-network-test |- |Runs only network benchmarks.

|--participant-node-ids |- |ints   Comma-separated list of broker IDs that the tests will run on. If not set, tests will run for all node IDs.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===